add some sass to our life

--- a/public/landing.html
+++ b/public/landing.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="stylesheets/style.css" />
     <title>formatio</title>
     <style>
       body {
@@ -13,7 +14,7 @@
   </head>
 
   <body>
-    <main></main>
+    <main>Hello</main>
   </body>
 </html>
 
