--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
       margin: 0;
     }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+  <script src="js/input.js"></script>
   <script src="js/main.js"></script>
   <script src="js/environment.js"></script>
 </head>
