pretty landing page

--- a/public/landing.html
+++ b/public/landing.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheets/style.css" />
-    <title>formatio</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-      }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/landing.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Catamaran"
+    />
   </head>
-
   <body>
-    <main>Hello</main>
+    <div class="bg-container">
+      <div class="title">
+        <h1 id="title">formatio</h1>
+      </div>
+      <div class="middle"></div>
+      <div class="form-input">
+        <form action="/input_name/" method="post">
+          <input
+            style="font-weight: bold"
+            id="name"
+            type="text"
+            name="name"
+            value="Enter your name..."
+          />
+          <input type="submit" value="OK" />
+        </form>
+      </div>
+    </div>
   </body>
 </html>
-
-<script>
-  src = "https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js";
-</script>
