--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>formatio</title>
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+        position: fixed;
+      }
+    </style>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>formatio</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-      position:fixed;
-    }
-  </style>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js"></script> <!-- WEBSOCKETS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script> <!-- P5 lib-->
-  <script src="js/input.js"></script>
-  <script src="js/functions.js"></script>
-  <script src="js/screen.js"></script>
-  <script src="js/cells.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/environment.js"></script>
-</head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js"></script>
+    <!-- WEBSOCKETS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+    <!-- P5 lib-->
+    <script src="js/input.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/screen.js"></script>
+    <script src="js/cells.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/environment.js"></script>
+  </head>
 
-<body>
-  <main>
-  </main>
-</body>
-
+  <body>
+    <main><!-- Canvas renders here--></main>
+  </body>
 </html>
