--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,9 @@
       }
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.1/socket.io.js"></script>
-    <!-- WEBSOCKETS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
     <!-- P5 lib-->
+    <script src="js/cookies.js"></script>
     <script src="js/input.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/screen.js"></script>
