er is een hoop gebeurd, we hebben bomen dankzij een toffe nieuwe manier om de omgeving te generen, namelijk seeds die een random algoritme bij elke client hetzelfde object genereert dankzij een enkele variabele. Er is een begin van een protocol aan het vormen. Zie drive voor details.

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script src="js/functions.js"></script>
     <script src="js/screen.js"></script>
     <script src="js/cells.js"></script>
+    <script src="js/gamestream.js"></script>
     <script src="js/main.js"></script>
     <script src="js/environment.js"></script>
   </head>
